--- a/demo/taro-vue2-app/package.json
+++ b/demo/taro-vue2-app/package.json
@@ -46,6 +46,7 @@
     "vue-template-compiler": "^2.5.0"
   },
   "devDependencies": {
+    "@tarojs/cli": "3.4.13",
     "@babel/core": "^7.18.6",
     "@icebreakers/weapp-tailwindcss-test-components": "^0.0.1",
     "@tarojs/mini-runner": "3.4.13",
@@ -64,6 +65,7 @@
     "tailwindcss": "^3.0.21",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^4.1.0",
+    "webpack": "^4.46.0",
     "vue-loader": "^15.9.2",
     "weapp-tailwindcss-webpack-plugin": "^1.6.8"
   }
