--- a/demo/taro-vue2-app/package.json
+++ b/demo/taro-vue2-app/package.json
@@ -37,7 +37,7 @@
   ],
   "author": "",
   "dependencies": {
-    "@babel/runtime": "^7.18.6",
+    "@babel/runtime": "^7.18.9",
     "@tarojs/components": "3.4.13",
     "@tarojs/plugin-framework-vue2": "3.4.13",
     "@tarojs/runtime": "3.4.13",
@@ -46,9 +46,9 @@
     "vue-template-compiler": "^2.5.0"
   },
   "devDependencies": {
-    "@tarojs/cli": "3.4.13",
-    "@babel/core": "^7.18.6",
+    "@babel/core": "^7.18.9",
     "@icebreakers/weapp-tailwindcss-test-components": "^0.0.1",
+    "@tarojs/cli": "3.4.13",
     "@tarojs/mini-runner": "3.4.13",
     "@tarojs/webpack-runner": "3.4.13",
     "@types/webpack-env": "^1.13.6",
@@ -62,11 +62,11 @@
     "postcss": "^8.4.6",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "stylelint": "9.3.0",
-    "tailwindcss": "^3.0.21",
+    "tailwindcss": "^3.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^4.1.0",
-    "webpack": "^4.46.0",
     "vue-loader": "^15.9.2",
-    "weapp-tailwindcss-webpack-plugin": "^1.6.8"
+    "weapp-tailwindcss-webpack-plugin": "^1.6.8",
+    "webpack": "^4.46.0"
   }
 }
