--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -34,36 +34,36 @@
     "build:quickapp-webview-union": "uni build -p quickapp-webview-union"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "^3.0.0-alpha-3041720220614001",
-    "@dcloudio/uni-app-plus": "^3.0.0-alpha-3041720220614001",
-    "@dcloudio/uni-components": "^3.0.0-alpha-3041720220614001",
-    "@dcloudio/uni-h5": "^3.0.0-alpha-3041720220614001",
-    "@dcloudio/uni-mp-alipay": "^3.0.0-alpha-3041720220614001",
-    "@dcloudio/uni-mp-baidu": "^3.0.0-alpha-3041720220614001",
-    "@dcloudio/uni-mp-kuaishou": "^3.0.0-alpha-3041720220614001",
-    "@dcloudio/uni-mp-lark": "^3.0.0-alpha-3041720220614001",
-    "@dcloudio/uni-mp-qq": "^3.0.0-alpha-3041720220614001",
-    "@dcloudio/uni-mp-toutiao": "^3.0.0-alpha-3041720220614001",
-    "@dcloudio/uni-mp-weixin": "^3.0.0-alpha-3041720220614001",
-    "@dcloudio/uni-quickapp-webview": "^3.0.0-alpha-3041720220614001",
+    "@dcloudio/uni-app": "3.0.0-alpha-3050220220719002",
+    "@dcloudio/uni-app-plus": "3.0.0-alpha-3050220220719002",
+    "@dcloudio/uni-components": "3.0.0-alpha-3050220220719002",
+    "@dcloudio/uni-h5": "3.0.0-alpha-3050220220719002",
+    "@dcloudio/uni-mp-alipay": "3.0.0-alpha-3050220220719002",
+    "@dcloudio/uni-mp-baidu": "3.0.0-alpha-3050220220719002",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-alpha-3050220220719002",
+    "@dcloudio/uni-mp-lark": "3.0.0-alpha-3050220220719002",
+    "@dcloudio/uni-mp-qq": "3.0.0-alpha-3050220220719002",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3050220220719002",
+    "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3050220220719002",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3050220220719002",
     "vue": "^3.2.37",
-    "vue-i18n": "^9.1.10",
+    "vue-i18n": "^9.1.9",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@dcloudio/types": "^2.6.11",
-    "@dcloudio/uni-automator": "^3.0.0-alpha-3041720220614001",
-    "@dcloudio/uni-cli-shared": "^3.0.0-alpha-3041720220614001",
-    "@dcloudio/vite-plugin-uni": "^3.0.0-alpha-3041720220614001",
+    "@dcloudio/types": "^3.0.7",
+    "@dcloudio/uni-automator": "3.0.0-alpha-3050220220719002",
+    "@dcloudio/uni-cli-shared": "3.0.0-alpha-3050220220719002",
+    "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3050220220719002",
     "@icebreakers/weapp-tailwindcss-test-components": "^0.0.1",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "sass": "^1.52.3",
-    "tailwindcss": "^3.1.3",
+    "tailwindcss": "^3.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^4.7.3",
-    "vite": "^2.9.12",
+    "vite": "^2.9.14",
     "weapp-tailwindcss-webpack-plugin": "^1.6.8"
   }
 }
