--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -23,7 +23,8 @@
     "dev:rn": "npm run build:rn -- --watch",
     "dev:qq": "npm run build:qq -- --watch",
     "dev:jd": "npm run build:jd -- --watch",
-    "dev:quickapp": "npm run build:quickapp -- --watch"
+    "dev:quickapp": "npm run build:quickapp -- --watch",
+    "open": "weapp open -p"
   },
   "browserslist": [
     "last 3 versions",
