--- a/demo/remax-app/package.json
+++ b/demo/remax-app/package.json
@@ -11,7 +11,8 @@
     "dev": "remax build -w -t wechat",
     "dev:ali": "remax build -w -t ali",
     "dev:toutiao": "remax build -w -t toutiao",
-    "build": "cross-env NODE_ENV=production remax build -t wechat"
+    "build": "cross-env NODE_ENV=production remax build -t wechat",
+    "open": "weapp open -p dist/wechat"
   },
   "dependencies": {
     "react": "^16.14.0",
