--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -44,7 +44,9 @@
     "test:h5": "cross-env UNI_PLATFORM=h5 jest -i",
     "test:ios": "cross-env UNI_PLATFORM=app-plus UNI_OS_NAME=ios jest -i",
     "test:mp-baidu": "cross-env UNI_PLATFORM=mp-baidu jest -i",
-    "test:mp-weixin": "cross-env UNI_PLATFORM=mp-weixin jest -i"
+    "test:mp-weixin": "cross-env UNI_PLATFORM=mp-weixin jest -i",
+    "open:dev": "weapp open -p dist/dev/mp-weixin",
+    "open:build": "weapp open -p dist/build/mp-weixin"
   },
   "dependencies": {
     "@dcloudio/uni-app-plus": "^2.0.1-33920220121003",
