--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -37,6 +37,7 @@
     "@babel/plugin-transform-typescript": "^7.16.1",
     "@babel/preset-env": "^7.10.4",
     "@babel/runtime-corejs3": "^7.10.4",
+    "@icebreakers/weapp-tailwindcss-test-components": "^0.0.1",
     "@mpxjs/miniprogram-simulate": "^1.4.12",
     "@mpxjs/mpx-jest": "0.0.22",
     "@mpxjs/webpack-plugin": "^2.7.18",
@@ -78,7 +79,8 @@
     "vue-router": "^4.0.16",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
-    "weapp-tailwindcss-webpack-plugin": "^1.6.7",
+    "weapp-ide-cli": "^1.0.0",
+    "weapp-tailwindcss-webpack-plugin": "^1.6.9",
     "webpack": "^5.43.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-dev-server": "^4.7.4",
