--- a/demo/native-mina/package.json
+++ b/demo/native-mina/package.json
@@ -59,7 +59,8 @@
     "tailwindcss": "^3.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^4.6.3",
-    "weapp-tailwindcss-webpack-plugin": "^1.6.8",
+    "weapp-ide-cli": "^1.0.0",
+    "weapp-tailwindcss-webpack-plugin": "^1.6.9",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
     "webpack-sources": "^3.2.3"
