--- a/demo/package.json
+++ b/demo/package.json
@@ -33,8 +33,7 @@
     "**/@tarojs/**"
   ],
   "devDependencies": {
-    "turbo": "^1.3.3",
-    "weapp-ide-cli": "^0.0.2"
+    "turbo": "^1.3.3"
   },
   "scripts": {
     "dev": "turbo run dev",
