--- a/demo/rax-app/package.json
+++ b/demo/rax-app/package.json
@@ -34,7 +34,8 @@
     "stylelint": "^14.9.0",
     "tailwindcss": "^3.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
-    "weapp-tailwindcss-webpack-plugin": "^1.6.8"
+    "weapp-ide-cli": "^1.0.0",
+    "weapp-tailwindcss-webpack-plugin": "^1.6.9"
   },
   "private": true,
   "originTemplate": "@rax-materials/scaffolds-app-ts"
