--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -67,7 +67,8 @@
     "tailwindcss": "^3.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^4.7.2",
-    "weapp-tailwindcss-webpack-plugin": "^1.6.8"
+    "weapp-ide-cli": "^1.0.0",
+    "weapp-tailwindcss-webpack-plugin": "^1.6.9"
   },
   "engines": {
     "node": ">=12.0.0"
