--- a/demo/taro-vue2-app/package.json
+++ b/demo/taro-vue2-app/package.json
@@ -67,7 +67,8 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^4.1.0",
     "vue-loader": "^15.9.2",
-    "weapp-tailwindcss-webpack-plugin": "^1.6.8",
+    "weapp-ide-cli": "^1.0.0",
+    "weapp-tailwindcss-webpack-plugin": "^1.6.9",
     "webpack": "^4.46.0"
   }
 }
