--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -67,6 +67,7 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^4.7.4",
     "vue-loader": "^17.0.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.6.8"
+    "weapp-ide-cli": "^1.0.0",
+    "weapp-tailwindcss-webpack-plugin": "^1.6.9"
   }
 }
