--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -66,6 +66,7 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^4.7.3",
     "vite": "^2.9.14",
-    "weapp-tailwindcss-webpack-plugin": "^1.6.8"
+    "weapp-ide-cli": "^1.0.0",
+    "weapp-tailwindcss-webpack-plugin": "^1.6.9"
   }
 }
