--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -108,7 +108,8 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~4.0.0",
     "vue-template-compiler": "^2.6.11",
-    "weapp-tailwindcss-webpack-plugin": "^1.6.8"
+    "weapp-ide-cli": "^1.0.0",
+    "weapp-tailwindcss-webpack-plugin": "^1.6.9"
   },
   "browserslist": [
     "Android >= 4.4",
