--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weapp-tailwindcss-webpack-plugin",
-  "version": "1.6.10-beta.1",
+  "version": "1.6.10-beta.2",
   "description": "把tailwindcss jit引擎，带给小程序开发者们\nbring tailwindcss jit engine to our miniprogram developers!",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
@@ -51,8 +51,7 @@
     "dist",
     "postcss.*",
     "replace.*",
-    "vite.*",
-    "!demo/**/*"
+    "vite.*"
   ],
   "publishConfig": {
     "access": "public",
