--- a/demo/package.json
+++ b/demo/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "files": [],
   "workspaces": {
     "packages": [
       "packages/**",
