--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "eslint": "8.20.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jest": "^26.7.0",
     "eslint-plugin-n": "^15.2.4",
     "eslint-plugin-promise": "6.0.0",
     "esm": "^3.2.25",
