--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -34,36 +34,38 @@
   "author": "",
   "dependencies": {
     "@babel/runtime": "^7.18.9",
-    "@tarojs/components": "3.4.13",
-    "@tarojs/react": "3.4.13",
-    "@tarojs/runtime": "3.4.13",
-    "@tarojs/taro": "3.4.13",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "taro-hooks": "1.5.8"
+    "@tarojs/components": "3.5.1",
+    "@tarojs/react": "3.5.1",
+    "@tarojs/runtime": "3.5.1",
+    "@tarojs/taro": "3.5.1",
+    "@tarojs/webpack5-runner": "^3.5.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "taro-hooks": "1.5.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.9",
+    "@babel/core": "^7.18.10",
     "@icebreakers/weapp-tailwindcss-test-components": "^0.0.1",
-    "@tarojs/cli": "3.4.13",
-    "@tarojs/mini-runner": "3.4.13",
+    "@tarojs/cli": "3.5.1",
+    "@tarojs/mini-runner": "3.5.1",
     "@tarojs/plugin-framework-react": "^3.4.13",
-    "@tarojs/webpack-runner": "3.4.13",
+    "@tarojs/webpack-runner": "3.5.1",
+    "@tarojs/webpack5-runner": "^3.5.1",
     "@types/react": "^18.0.15",
     "@types/webpack-env": "^1.17.0",
-    "@typescript-eslint/eslint-plugin": "^5.30.7",
-    "@typescript-eslint/parser": "^5.30.7",
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
+    "@typescript-eslint/parser": "^5.32.0",
     "autoprefixer": "^10.4.7",
     "babel-plugin-import": "^1.13.3",
-    "babel-preset-taro": "3.4.13",
-    "eslint": "^8.16.0",
-    "eslint-config-taro": "3.4.13",
+    "babel-preset-taro": "3.5.1",
+    "eslint": "^8.21.0",
+    "eslint-config-taro": "3.5.1",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "postcss": "^8.4.14",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
-    "stylelint": "14.8.5",
+    "stylelint": "14.9.1",
     "tailwindcss": "^3.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^4.7.2",
