--- a/demo/taro-vue2-app/package.json
+++ b/demo/taro-vue2-app/package.json
@@ -39,36 +39,36 @@
   "author": "",
   "dependencies": {
     "@babel/runtime": "^7.18.9",
-    "@tarojs/components": "3.4.13",
-    "@tarojs/plugin-framework-vue2": "3.4.13",
-    "@tarojs/runtime": "3.4.13",
-    "@tarojs/taro": "3.4.13",
+    "@tarojs/components": "3.5.1",
+    "@tarojs/plugin-framework-vue2": "3.5.1",
+    "@tarojs/runtime": "3.5.1",
+    "@tarojs/taro": "3.5.1",
     "vue": "^2.5.0",
     "vue-template-compiler": "^2.5.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.9",
+    "@babel/core": "^7.18.10",
     "@icebreakers/weapp-tailwindcss-test-components": "^0.0.1",
-    "@tarojs/cli": "3.4.13",
-    "@tarojs/mini-runner": "3.4.13",
-    "@tarojs/webpack-runner": "3.4.13",
+    "@tarojs/cli": "3.5.1",
+    "@tarojs/mini-runner": "3.5.1",
+    "@tarojs/webpack-runner": "3.5.1",
     "@types/webpack-env": "^1.13.6",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
+    "@typescript-eslint/parser": "^5.32.0",
     "autoprefixer": "^10.4.2",
-    "babel-preset-taro": "3.4.13",
-    "eslint": "^6.8.0",
-    "eslint-config-taro": "3.4.13",
-    "eslint-plugin-vue": "^6.x",
+    "babel-preset-taro": "3.5.1",
+    "eslint": "^8.21.0",
+    "eslint-config-taro": "3.5.1",
+    "eslint-plugin-vue": "^9.3.0",
     "postcss": "^8.4.6",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
-    "stylelint": "9.3.0",
+    "stylelint": "14.9.1",
     "tailwindcss": "^3.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^4.1.0",
-    "vue-loader": "^15.9.2",
+    "vue-loader": "^17.0.0",
     "weapp-ide-cli": "^1.0.0",
     "weapp-tailwindcss-webpack-plugin": "^1.6.9",
-    "webpack": "^4.46.0"
+    "webpack": "^5.74.0"
   }
 }
