--- a/demo/package.json
+++ b/demo/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "license": "MIT",
   "files": [],
-  "workspaces": {
+  "_workspaces": {
     "packages": [
       "packages/**",
       "native-mina",
@@ -33,7 +33,7 @@
   "_nohoist": [
     "**/@tarojs/**"
   ],
-  "devDependencies": {
+  "_devDependencies": {
     "turbo": "^1.3.3"
   },
   "scripts": {
