chore: add android/ios build doc

--- a/package.json
+++ b/package.json
@@ -59,20 +59,25 @@
     "registry": "https://registry.npmjs.org"
   },
   "keywords": [
-    "webpack",
-    "webpack-plugin",
     "weapp",
-    "postcss",
-    "taro",
-    "uni-app",
-    "vite",
     "tailwindcss",
-    "jit",
-    "tailwindcss jit",
-    "mp",
     "mini",
     "miniprogram",
-    "weapp-tailwindcss"
+    "taro",
+    "uni-app",
+    "remax",
+    "rax",
+    "jit",
+    "vite",
+    "postcss",
+    "tailwindcss jit",
+    "mp",
+    "weapp-tailwindcss",
+    "android",
+    "ios",
+    "小程序",
+    "webpack",
+    "webpack-plugin"
   ],
   "author": "SonOfMagic <qq1324318532@gmail.com>",
   "license": "MIT",
