--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -65,6 +65,7 @@
     "path": "^0.12.7",
     "postcss": "^8.4.14",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
+    "postcss-rpx-transform": "^1.0.1",
     "rimraf": "^3.0.2",
     "sass": "^1.54.2",
     "sass-loader": "^13.0.2",
@@ -80,7 +81,7 @@
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.7.8",
     "weapp-ide-cli": "^1.0.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.7.0",
+    "weapp-tailwindcss-webpack-plugin": "^1.7.1",
     "webpack": "^5.74.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-dev-server": "^4.9.3",
