--- a/demo/native-mina/package.json
+++ b/demo/native-mina/package.json
@@ -49,6 +49,7 @@
     "postcss": "^8.4.7",
     "postcss-loader": "^7.0.1",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
+    "postcss-rpx-transform": "^1.0.1",
     "prettier": "^2.6.1",
     "prettier-plugin-tailwindcss": "^0.1.8",
     "replace-ext": "^2.0.0",
@@ -60,7 +61,7 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^4.6.3",
     "weapp-ide-cli": "^1.0.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.7.0",
+    "weapp-tailwindcss-webpack-plugin": "^1.7.1",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
     "webpack-sources": "^3.2.3"
