--- a/demo/rax-app/package.json
+++ b/demo/rax-app/package.json
@@ -29,13 +29,14 @@
     "eslint": "^8.17.0",
     "postcss": "^8.4.12",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
+    "postcss-rpx-transform": "^1.0.1",
     "prettier": "^2.6.2",
     "rax-app": "3.8.22",
     "stylelint": "^14.9.0",
     "tailwindcss": "^3.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^1.0.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.7.0"
+    "weapp-tailwindcss-webpack-plugin": "^1.7.1"
   },
   "private": true,
   "originTemplate": "@rax-materials/scaffolds-app-ts"
