--- a/demo/remax-app/package.json
+++ b/demo/remax-app/package.json
@@ -25,9 +25,10 @@
     "cross-env": "^7.0.2",
     "postcss": "7",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
+    "postcss-rpx-transform": "^1.0.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^1.0.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.7.0"
+    "weapp-tailwindcss-webpack-plugin": "^1.7.1"
   }
 }
