--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -65,12 +65,13 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "postcss": "^8.4.14",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
+    "postcss-rpx-transform": "^1.0.1",
     "stylelint": "14.9.1",
     "tailwindcss": "^3.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^4.7.2",
     "weapp-ide-cli": "^1.0.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.7.0"
+    "weapp-tailwindcss-webpack-plugin": "^1.7.1"
   },
   "engines": {
     "node": ">=12.0.0"
