--- a/demo/taro-vue2-app/package.json
+++ b/demo/taro-vue2-app/package.json
@@ -62,13 +62,14 @@
     "eslint-plugin-vue": "^9.3.0",
     "postcss": "^8.4.6",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
+    "postcss-rpx-transform": "^1.0.1",
     "stylelint": "14.9.1",
     "tailwindcss": "^3.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^4.1.0",
     "vue-loader": "^17.0.0",
     "weapp-ide-cli": "^1.0.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.7.0",
+    "weapp-tailwindcss-webpack-plugin": "^1.7.1",
     "webpack": "^5.74.0"
   }
 }
