--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -62,12 +62,13 @@
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
+    "postcss-rpx-transform": "^1.0.1",
     "sass": "^1.54.2",
     "tailwindcss": "^3.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^4.7.3",
     "vite": "^2.9.14",
     "weapp-ide-cli": "^1.0.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.7.0"
+    "weapp-tailwindcss-webpack-plugin": "^1.7.1"
   }
 }
