--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -38,19 +38,17 @@
     "@tarojs/react": "3.5.1",
     "@tarojs/runtime": "3.5.1",
     "@tarojs/taro": "3.5.1",
-    "@tarojs/webpack5-runner": "^3.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "taro-hooks": "1.5.9"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
-    "@icebreakers/weapp-tailwindcss-test-components": "^0.0.1",
     "@tarojs/cli": "3.5.1",
     "@tarojs/mini-runner": "3.5.1",
     "@tarojs/plugin-framework-react": "^3.4.13",
     "@tarojs/webpack-runner": "3.5.1",
-    "@tarojs/webpack5-runner": "^3.5.1",
+    "@tarojs/webpack5-runner": "3.5.1",
     "@types/react": "^18.0.15",
     "@types/webpack-env": "^1.17.0",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
