--- a/demo/remax-app/package.json
+++ b/demo/remax-app/package.json
@@ -28,6 +28,6 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^1.0.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.7.1"
+    "weapp-tailwindcss-webpack-plugin": "^1.7.2-beta.2"
   }
 }
