--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -53,6 +53,7 @@
     "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
+    "@vue/babel-plugin-jsx": "^1.1.1",
     "@vue/compiler-sfc": "^3.2.37",
     "autoprefixer": "^10.4.2",
     "babel-preset-taro": "3.5.1",
@@ -68,6 +69,6 @@
     "typescript": "^4.7.4",
     "vue-loader": "^17.0.0",
     "weapp-ide-cli": "^1.0.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.7.1"
+    "weapp-tailwindcss-webpack-plugin": "^1.7.2-beta.2"
   }
 }
