--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     "postcss-load-config": "^4.0.1",
     "postcss-loader": "^7.0.1",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
+    "postcss-selector-parser": "^6.0.10",
     "prettier": "^2.7.1",
     "rollup": "^2.77.2",
     "rollup-plugin-terser": "^7.0.2",
