--- a/package.json
+++ b/package.json
@@ -98,7 +98,9 @@
     "@types/esm": "^3.2.0",
     "@types/jest": "^27.5.1",
     "@types/loader-utils": "^2.0.3",
+    "@types/lodash.memoize": "^4.1.7",
     "@types/node": "^18.6.4",
+    "@types/object-hash": "^2.2.1",
     "@types/tailwindcss": "^3.1.0",
     "@types/webpack": "^5.28.0",
     "@types/webpack-sources": "^3.2.0",
@@ -118,8 +120,10 @@
     "esm": "^3.2.25",
     "execa": "5",
     "jest": "^27.5.1",
+    "lodash.memoize": "^4.1.2",
     "memfs": "^3.4.7",
     "miniprogram-automator": "^0.11.0",
+    "object-hash": "^3.0.0",
     "postcss": "^8.4.14",
     "postcss-load-config": "^4.0.1",
     "postcss-loader": "^7.0.1",
