--- a/demo/taro-vue2-app/package.json
+++ b/demo/taro-vue2-app/package.json
@@ -69,7 +69,7 @@
     "typescript": "^4.1.0",
     "vue-loader": "^17.0.0",
     "weapp-ide-cli": "^1.0.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.7.2",
+    "weapp-tailwindcss-webpack-plugin": "^1.7.3-beta.0",
     "webpack": "^5.74.0"
   }
 }
