--- a/demo/web/package.json
+++ b/demo/web/package.json
@@ -3,20 +3,20 @@
   "private": true,
   "version": "0.0.1",
   "scripts": {
-    "dev1": "next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.8",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "12.2.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
-    "eslint": "8.7.0",
-    "eslint-config-next": "12.0.8",
+    "eslint": "8.22.0",
+    "eslint-config-next": "12.2.5",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.15",
     "weapp-tailwindcss-webpack-plugin": "^1.2.1"
