--- a/demo/taro-vue2-app/package.json
+++ b/demo/taro-vue2-app/package.json
@@ -54,7 +54,6 @@
     "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
-    "@vue/compiler-sfc": "2.7.8",
     "autoprefixer": "^10.4.2",
     "babel-preset-taro": "3.5.1",
     "eslint": "^8.21.0",
@@ -69,7 +68,7 @@
     "typescript": "^4.1.0",
     "vue-loader": "^17.0.0",
     "weapp-ide-cli": "^1.0.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.7.3",
+    "weapp-tailwindcss-webpack-plugin": "^1.8.0-beta.0",
     "webpack": "^5.74.0"
   }
 }
