--- a/demo/web/package.json
+++ b/demo/web/package.json
@@ -18,7 +18,11 @@
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
     "postcss": "^8.4.5",
+    "postcss-rem-to-responsive-pixel": "^5.1.3",
+    "postcss-rpx-transform": "^1.0.1",
     "tailwindcss": "^3.0.15",
-    "weapp-tailwindcss-webpack-plugin": "^1.2.1"
+    "tailwindcss-rem2px-preset": "^1.0.3",
+    "weapp-ide-cli": "^1.0.0",
+    "weapp-tailwindcss-webpack-plugin": "^1.8.0-beta.0"
   }
 }
