--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -80,7 +80,7 @@
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.7.8",
     "weapp-ide-cli": "^1.0.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.8.0-beta.1",
+    "weapp-tailwindcss-webpack-plugin": "^1.8.0",
     "webpack": "^5.74.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-dev-server": "^4.9.3",
