--- a/package.json
+++ b/package.json
@@ -109,8 +109,9 @@
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
     "autoprefixer": "^10.4.8",
-    "chalk": "^5.0.1",
+    "chalk": "4.1.2",
     "cross-env": "^7.0.3",
+    "css-loader": "^6.7.1",
     "defu": "^6.0.0",
     "del": "^6.1.1",
     "eslint": "8.22.0",
@@ -121,6 +122,7 @@
     "eslint-plugin-promise": "6.0.0",
     "esm": "^3.2.25",
     "execa": "5",
+    "html-loader": "^4.1.0",
     "jest": "^27.5.1",
     "lodash.memoize": "^4.1.2",
     "memfs": "^3.4.7",
@@ -134,6 +136,7 @@
     "rollup": "^2.78.0",
     "rollup-plugin-terser": "^7.0.2",
     "simple-functional-loader": "^1.2.1",
+    "style-loader": "^3.3.1",
     "tailwindcss": "^3.1.8",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.9.1",
