test: case react selector test demo

--- a/demo/taro-app/project.config.json
+++ b/demo/taro-app/project.config.json
@@ -78,6 +78,13 @@
           "query": "",
           "launchMode": "default",
           "scene": null
+        },
+        {
+          "name": "arbitraryVariants",
+          "pathName": "pages/debug/arbitraryVariants",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
         }
       ]
     }
