--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "@types/jest": "^27.5.1",
     "@types/loader-utils": "^2.0.3",
     "@types/lodash.memoize": "^4.1.7",
+    "@types/memory-fs": "^0.3.3",
     "@types/node": "^18.7.14",
     "@types/object-hash": "^2.2.1",
     "@types/tailwindcss": "^3.1.0",
@@ -112,6 +113,7 @@
     "chalk": "4.1.2",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
+    "css-loader3": "npm:css-loader@3.6.0",
     "defu": "6.0.0",
     "del": "^6.1.1",
     "eslint": "8.23.0",
@@ -123,9 +125,13 @@
     "esm": "^3.2.25",
     "execa": "5",
     "html-loader": "^4.1.0",
+    "html-loader1": "npm:html-loader@1.3.2",
+    "html-loader2": "npm:html-loader@2.1.2",
+    "html-loader3": "npm:html-loader@3.1.2",
     "jest": "^27.5.1",
     "lodash.memoize": "^4.1.2",
     "memfs": "^3.4.7",
+    "memory-fs": "^0.5.0",
     "miniprogram-automator": "^0.11.0",
     "object-hash": "^3.0.0",
     "open-cli": "^7.0.1",
@@ -137,6 +143,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "simple-functional-loader": "^1.2.1",
     "style-loader": "^3.3.1",
+    "style-loader2": "npm:style-loader@2.0.0",
     "tailwindcss": "^3.1.8",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.9.1",
