--- a/package.json
+++ b/package.json
@@ -110,7 +110,6 @@
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "autoprefixer": "^10.4.8",
-    "chalk": "4.1.2",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "css-loader3": "npm:css-loader@3.6.0",
@@ -163,6 +162,7 @@
     "loader-utils": "^2.0.2",
     "postcss": "^8.4.16",
     "postcss-selector-parser": "^6.0.10",
-    "webpack-sources": "^3.2.3"
+    "webpack-sources": "^3.2.3",
+    "chalk": "4.1.2"
   }
 }
