--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "@types/esm": "^3.2.0",
     "@types/jest": "^27.5.1",
     "@types/loader-utils": "^2.0.3",
+    "@types/lodash.groupby": "^4.6.7",
     "@types/lodash.memoize": "^4.1.7",
     "@types/memory-fs": "^0.3.3",
     "@types/node": "^18.7.14",
@@ -110,6 +111,7 @@
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "autoprefixer": "^10.4.8",
+    "chalk": "4.1.2",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "css-loader3": "npm:css-loader@3.6.0",
@@ -126,6 +128,7 @@
     "html-loader": "^4.1.0",
     "html-loader1": "npm:html-loader@1.3.2",
     "jest": "^27.5.1",
+    "lodash.groupby": "^4.6.0",
     "lodash.memoize": "^4.1.2",
     "memfs": "^3.4.7",
     "memory-fs": "^0.5.0",
@@ -137,6 +140,7 @@
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "prettier": "^2.7.1",
     "rollup": "^2.79.0",
+    "rollup-plugin-analyzer": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "simple-functional-loader": "^1.2.1",
     "style-loader": "^3.3.1",
@@ -160,7 +164,6 @@
     "loader-utils": "^2.0.2",
     "postcss": "^8.4.16",
     "postcss-selector-parser": "^6.0.10",
-    "webpack-sources": "^3.2.3",
-    "chalk": "4.1.2"
+    "webpack-sources": "^3.2.3"
   }
 }
