--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     }
   },
   "scripts": {
-    "dev": "yarn clean && yarn dts && cross-env NODE_ENV=development rollup -cw rollup.config.ts --configPlugin typescript",
+    "dev": "yarn clean && yarn dts && cross-env NODE_ENV=development rollup -c rollup.config.ts --configPlugin typescript -w",
     "build": "yarn clean && cross-env NODE_ENV=production rollup -c rollup.config.ts --configPlugin typescript && yarn dts && yarn fix-dts",
     "build:tsc": "cross-env NODE_ENV=development tsc --build tsconfig.json",
     "dts": "ttsc --emitDeclarationOnly -p tsconfig.dts.json",
