feat: native demo import @vant/weapp

--- a/demo/native-mina/src/app.json
+++ b/demo/native-mina/src/app.json
@@ -1,7 +1,5 @@
 {
-  "pages": [
-    "pages/index/index"
-  ],
+  "pages": ["pages/index/index"],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
