--- a/demo/native-mina/package.json
+++ b/demo/native-mina/package.json
@@ -21,6 +21,7 @@
   },
   "sideEffects": false,
   "dependencies": {
+    "@vant/weapp": "^1.10.4",
     "dayjs": "^1.11.4",
     "lodash": "^4.17.21",
     "rxjs": "^7.5.6"
@@ -43,7 +44,7 @@
     "file-loader": "^6.2.0",
     "jest": "^27.5.1",
     "lodash-webpack-plugin": "^0.11.5",
-    "miniprogram-api-typings": "^3.4.5",
+    "miniprogram-api-typings": "^3.5.0",
     "npm-run-all": "^4.1.2",
     "postcss": "^8.4.7",
     "postcss-loader": "^7.0.1",
