--- a/demo/native-mina/tsconfig.json
+++ b/demo/native-mina/tsconfig.json
@@ -9,7 +9,12 @@
     "moduleResolution": "node",
     "typeRoots": ["./node_modules/@types", "./node_modules/miniprogram-api-typings"],
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "baseUrl": ".",
+    "types": ["miniprogram-api-typings"],
+    "paths": {
+      "@vant/weapp/*": ["./node_modules/@vant/weapp/dist/*"]
+    }
   },
   "exclude": ["node_modules", "dist", "webpack.config.js", "jest.config.js"]
 }
