--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -70,6 +70,7 @@
     "@vue/shared": "^3.0.0",
     "core-js": "^3.23.5",
     "regenerator-runtime": "^0.13.9",
+    "uview-ui": "2.0.31",
     "vue": "^2.6.11",
     "vuex": "^3.2.0"
   },
