--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weapp-tailwindcss-webpack-plugin",
-  "version": "1.8.2",
+  "version": "1.9.0-beta.0",
   "description": "把tailwindcss jit引擎，带给小程序开发者们\nbring tailwindcss jit engine to our miniprogram developers!",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
@@ -29,7 +29,7 @@
     "build": "yarn clean && cross-env NODE_ENV=production rollup -c rollup.config.ts --configPlugin typescript && yarn dts && yarn fix-dts",
     "build:tsc": "cross-env NODE_ENV=development tsc --build tsconfig.json",
     "dts": "ttsc --emitDeclarationOnly -p tsconfig.dts.json",
-    "fix-dts": "node scripts/fix-dts.js",
+    "fix-dts": "ts-node scripts/fix-dts.ts",
     "test": "jest",
     "init:rename": "node scripts/init/rename.js",
     "clean": "node scripts/clean.js",
@@ -125,6 +125,7 @@
     "eslint-plugin-promise": "6.0.1",
     "esm": "^3.2.25",
     "execa": "5",
+    "fast-glob": "^3.2.11",
     "html-loader": "^4.1.0",
     "html-loader1": "npm:html-loader@1.3.2",
     "jest": "^27.5.1",
