--- a/demo/native-mina/package.json
+++ b/demo/native-mina/package.json
@@ -10,7 +10,8 @@
     "dev": "npm run start",
     "type-check": "tsc --noEmit",
     "start": "webpack --watch --progress",
-    "build": "cross-env NODE_ENV=production BUILD_TYPE=release webpack",
+    "build": "cross-env NODE_ENV=production BUILD_TYPE=release webpack && yarn build:npm",
+    "build:npm": "weapp build-npm -p",
     "preupload": "run-s build",
     "upload": "run-script-os",
     "upload:darwin": "/Applications/wechatwebdevtools.app/Contents/MacOS/cli -u $npm_package_version@$INIT_CWD",
@@ -61,7 +62,7 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^4.6.3",
     "weapp-ide-cli": "^1.0.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.8.2",
+    "weapp-tailwindcss-webpack-plugin": "^1.9.0-beta.0",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
     "webpack-sources": "^3.2.3"
