--- a/demo/rax-app/package.json
+++ b/demo/rax-app/package.json
@@ -35,7 +35,7 @@
     "tailwindcss": "^3.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^1.0.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.8.2"
+    "weapp-tailwindcss-webpack-plugin": "^1.9.0-beta.0"
   },
   "private": true,
   "originTemplate": "@rax-materials/scaffolds-app-ts"
