--- a/package.json
+++ b/package.json
@@ -146,6 +146,7 @@
     "simple-functional-loader": "^1.2.1",
     "style-loader": "^3.3.1",
     "style-loader2": "npm:style-loader@2.0.0",
+    "tailwind-children": "^0.5.0",
     "tailwindcss": "^3.1.8",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.9.1",
