feat: commit loader raw test case

--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "dist",
     "postcss.*",
     "replace.*",
-    "vite.*"
+    "vite.*",
+    "mangle.*"
   ],
   "publishConfig": {
     "access": "public",
