--- a/package.json
+++ b/package.json
@@ -142,8 +142,8 @@
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "prettier": "^2.7.1",
     "rollup": "^2.79.0",
-    "rollup-plugin-analyzer": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-visualizer": "^5.8.1",
     "simple-functional-loader": "^1.2.1",
     "style-loader": "^3.3.1",
     "style-loader2": "npm:style-loader@2.0.0",
