--- a/demo/taro-vue2-app/package.json
+++ b/demo/taro-vue2-app/package.json
@@ -82,7 +82,7 @@
     "typescript": "^4.1.0",
     "vue-loader": "^15.9.2",
     "weapp-ide-cli": "^1.0.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.9.0",
+    "weapp-tailwindcss-webpack-plugin": "^1.9.1-beta.0",
     "webpack": "5.69.0"
   }
 }
