--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -110,7 +110,7 @@
     "typescript": "~4.0.0",
     "vue-template-compiler": "^2.6.11",
     "weapp-ide-cli": "^1.0.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.9.0"
+    "weapp-tailwindcss-webpack-plugin": "^1.9.1-beta.0"
   },
   "browserslist": [
     "Android >= 4.4",
