--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "@types/esm": "^3.2.0",
     "@types/jest": "^27.5.1",
     "@types/loader-utils": "^2.0.3",
+    "@types/lodash": "^4.14.184",
     "@types/lodash.groupby": "^4.6.7",
     "@types/lodash.memoize": "^4.1.7",
     "@types/memory-fs": "^0.3.3",
@@ -130,6 +131,7 @@
     "html-loader": "^4.1.0",
     "html-loader1": "npm:html-loader@1.3.2",
     "jest": "^27.5.1",
+    "lodash": "^4.17.21",
     "lodash.groupby": "^4.6.0",
     "lodash.memoize": "^4.1.2",
     "memfs": "^3.4.7",
