--- a/demo/native-mina/package.json
+++ b/demo/native-mina/package.json
@@ -11,6 +11,7 @@
     "type-check": "tsc --noEmit",
     "start": "webpack --watch --progress",
     "build": "cross-env NODE_ENV=production BUILD_TYPE=release webpack && yarn build:npm",
+    "build:local": "cross-env LOCAL=1 NODE_ENV=production BUILD_TYPE=release webpack && yarn build:npm",
     "build:npm": "weapp build-npm -p",
     "preupload": "run-s build",
     "upload": "run-script-os",
@@ -62,7 +63,7 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^4.6.3",
     "weapp-ide-cli": "^1.0.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.9.1-beta.1",
+    "weapp-tailwindcss-webpack-plugin": "^1.9.1",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
     "webpack-sources": "^3.2.3"
