--- a/demo/rax-app/package.json
+++ b/demo/rax-app/package.json
@@ -7,6 +7,7 @@
     "dev": "npm run start",
     "start": "rax-app start",
     "build": "rax-app build",
+    "build:local": "cross-env LOCAL=1 rax-app build",
     "eslint": "eslint --ext .js,.jsx,.tsx,.ts ./",
     "stylelint": "stylelint \"**/*.{css,scss,less}\"",
     "prettier": "prettier **/* --write",
@@ -25,6 +26,7 @@
     "@iceworks/spec": "^1.6.0",
     "@types/rax": "^1.0.0",
     "autoprefixer": "^10.4.4",
+    "cross-env": "^7.0.3",
     "eslint": "^8.17.0",
     "postcss": "^8.4.12",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
@@ -35,7 +37,7 @@
     "tailwindcss": "^3.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^1.0.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.9.1-beta.1"
+    "weapp-tailwindcss-webpack-plugin": "^1.9.1"
   },
   "private": true,
   "originTemplate": "@rax-materials/scaffolds-app-ts"
