--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "npm run dev:weapp",
     "build": "npm run build:weapp",
+    "build:local": "cross-env LOCAL=1 npm run build:weapp",
     "build:weapp": "taro build --type weapp",
     "build:swan": "taro build --type swan",
     "build:alipay": "taro build --type alipay",
@@ -56,6 +57,7 @@
     "autoprefixer": "^10.4.7",
     "babel-plugin-import": "^1.13.3",
     "babel-preset-taro": "3.5.1",
+    "cross-env": "^7.0.3",
     "eslint": "^8.21.0",
     "eslint-config-taro": "3.5.1",
     "eslint-plugin-import": "^2.12.0",
@@ -69,7 +71,7 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^4.7.2",
     "weapp-ide-cli": "^1.0.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.9.1-beta.1"
+    "weapp-tailwindcss-webpack-plugin": "^1.9.1"
   },
   "engines": {
     "node": ">=12.0.0"
