--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "uni -p mp-weixin",
     "build": "uni build -p mp-weixin",
+    "build:local": "cross-env LOCAL=1 uni build -p mp-weixin",
     "dev:app": "uni -p app",
     "dev:custom": "uni -p",
     "dev:h5": "uni",
@@ -69,6 +70,6 @@
     "typescript": "^4.7.3",
     "vite": "^2.9.14",
     "weapp-ide-cli": "^1.0.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.9.1-beta.1"
+    "weapp-tailwindcss-webpack-plugin": "^1.9.1"
   }
 }
