chore: upgrade deps to latest

--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -71,6 +71,6 @@
     "typescript": "^4.7.4",
     "vue-loader": "^17.0.0",
     "weapp-ide-cli": "^1.0.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.9.2-beta.0"
+    "weapp-tailwindcss-webpack-plugin": "^1.9.2"
   }
 }
