--- a/demo/web/package.json
+++ b/demo/web/package.json
@@ -23,6 +23,6 @@
     "tailwindcss": "^3.0.15",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^1.0.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.9.2-beta.0"
+    "weapp-tailwindcss-webpack-plugin": "^1.9.2"
   }
 }
