feat: add weapp-tailwindcss-children plugin

--- a/demo/remax-app/package.json
+++ b/demo/remax-app/package.json
@@ -29,6 +29,7 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^1.0.0",
+    "weapp-tailwindcss-children": "^0.1.0",
     "weapp-tailwindcss-webpack-plugin": "^1.9.2"
   }
 }
