--- a/demo/rax-app/package.json
+++ b/demo/rax-app/package.json
@@ -37,6 +37,7 @@
     "tailwindcss": "^3.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^1.0.0",
+    "weapp-tailwindcss-children": "^0.1.0",
     "weapp-tailwindcss-webpack-plugin": "^1.9.2"
   },
   "private": true,
