--- a/demo/taro-vue2-app/package.json
+++ b/demo/taro-vue2-app/package.json
@@ -84,6 +84,7 @@
     "typescript": "^4.1.0",
     "vue-loader": "^15.9.2",
     "weapp-ide-cli": "^1.0.0",
+    "weapp-tailwindcss-children": "^0.1.0",
     "weapp-tailwindcss-webpack-plugin": "^1.9.2",
     "webpack": "5.69.0"
   }
