--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -64,12 +64,12 @@
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "postcss-rpx-transform": "^1.0.1",
     "sass": "^1.54.8",
-    "tailwind-children": "^0.5.0",
     "tailwindcss": "^3.1.8",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^4.7.3",
     "vite": "^2.9.14",
     "weapp-ide-cli": "^1.0.0",
+    "weapp-tailwindcss-children": "^0.1.0",
     "weapp-tailwindcss-webpack-plugin": "^1.9.2"
   }
 }
