--- a/package.json
+++ b/package.json
@@ -162,6 +162,7 @@
     "typescript": "^4.8.3",
     "typescript-transform-paths": "^3.3.1",
     "vite": "^2.9.15",
+    "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.0.0",
     "webpack4": "npm:webpack@webpack-4"
   },
