fixed: taro vue2 vue3 [jt]sx invalid issue

--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -10,6 +10,7 @@
   },
   "scripts": {
     "dev": "npm run dev:weapp",
+    "dev:local": "cross-env LOCAL=1 npm run dev:weapp",
     "build": "npm run build:weapp",
     "build:local": "cross-env LOCAL=1 npm run build:weapp",
     "build:weapp": "taro build --type weapp",
