--- a/demo/taro-vue3-app/tsconfig.json
+++ b/demo/taro-vue3-app/tsconfig.json
@@ -18,14 +18,13 @@
     "jsx": "react-jsx",
     "allowJs": true,
     "resolveJsonModule": true,
-    "typeRoots": [
-      "node_modules/@types"
-    ]
+    "typeRoots": ["node_modules/@types"],
+    "types": ["@tarojs/taro", "webpack-env", "vite/client"],
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
   "include": ["./src", "global.d.ts"],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ],
+  "exclude": ["node_modules", "dist"],
   "compileOnSave": false
 }
