--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -73,7 +73,8 @@
     "typescript": "^4.8.4",
     "weapp-ide-cli": "^1.0.0",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.9.3"
+    "weapp-tailwindcss-webpack-plugin": "^1.9.4-beta.0",
+    "webpack": "^5.74.0"
   },
   "engines": {
     "node": ">=12.0.0"
