--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -52,6 +52,7 @@
     "@tarojs/cli": "3.5.6",
     "@tarojs/mini-runner": "3.5.6",
     "@tarojs/webpack-runner": "3.5.6",
+    "@tarojs/webpack5-runner": "^3.5.6",
     "@types/webpack-env": "^1.18.0",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "@typescript-eslint/parser": "^5.38.1",
@@ -74,6 +75,7 @@
     "vue-loader": "^17.0.0",
     "weapp-ide-cli": "^1.0.0",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.9.3"
+    "weapp-tailwindcss-webpack-plugin": "^1.9.4-beta.0",
+    "webpack": "^5.74.0"
   }
 }
