chore: commit taro snap and attrs

--- a/demo/taro-vue2-app/package.json
+++ b/demo/taro-vue2-app/package.json
@@ -10,7 +10,8 @@
   },
   "scripts": {
     "dev": "npm run dev:weapp",
-    "dev:local": "cross-env LOCAL=1 npm run dev:weapp",
+    "dev:local": "cross-env LOCAL=1 WRITE=1 npm run dev:weapp",
+    "dev:write": "cross-env WRITE=1 npm run dev:weapp",
     "build": "npm run build:weapp",
     "build:local": "cross-env LOCAL=1 npm run build:weapp",
     "build:weapp": "taro build --type weapp",
@@ -87,7 +88,7 @@
     "vue-loader": "^15.9.2",
     "weapp-ide-cli": "^1.0.0",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.9.4-beta.0",
+    "weapp-tailwindcss-webpack-plugin": "^1.9.4-beta.1",
     "webpack": "^5.74.0"
   }
 }
