--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -5,6 +5,8 @@
   "description": "ge",
   "scripts": {
     "dev": "npm run dev:weapp",
+    "dev:local": "cross-env LOCAL=1 WRITE=1 npm run dev:weapp",
+    "dev:write": "cross-env WRITE=1 npm run dev:weapp",
     "build": "npm run build:weapp",
     "build:local": "cross-env LOCAL=1 npm run build:weapp",
     "build:weapp": "taro build --type weapp",
@@ -73,7 +75,7 @@
     "typescript": "^4.8.4",
     "weapp-ide-cli": "^1.0.0",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.9.4-beta.0",
+    "weapp-tailwindcss-webpack-plugin": "^1.9.4-beta.1",
     "webpack": "^5.74.0"
   },
   "engines": {
