Squashed commit of the following:
commit 2ddb2a5d1a86a654f5b795916dfca815239f8a2a
Author: sonofmagic <1324318532@qq.com>
Date:   Fri Oct 7 15:15:09 2022 +0800

    chore: update deps

commit 9c9aa7b016217ca60ef3a82818c6ad63e2baa523
Author: sonofmagic <1324318532@qq.com>
Date:   Fri Oct 7 14:52:20 2022 +0800

    v1.11.2

commit b4a1497c9af1a9dc713d70be54621b521a6ee07c
Author: sonofmagic <1324318532@qq.com>
Date:   Fri Oct 7 14:25:11 2022 +0800

    feat: vue3 add uview-ui

commit 16ec6e14efaa0f1a3bd1f392f8d1fa2c15eb7535
Author: sonofmagic <1324318532@qq.com>
Date:   Thu Oct 6 22:48:08 2022 +0800

    chore: move readme template to script folder

commit b4b58ebcbdac37cd1267acca056cad02abac3ca6
Author: sonofmagic <1324318532@qq.com>
Date:   Thu Oct 6 22:08:22 2022 +0800

    chore: upgrade demo deps

commit dbe1fcc4e2c1325a223449b828413fe4ab7bd242
Author: sonofmagic <1324318532@qq.com>
Date:   Thu Oct 6 21:49:59 2022 +0800

    v1.11.1

commit 22b855e439251146ddac408dc9d315e07178d18c
Author: sonofmagic <1324318532@qq.com>
Date:   Thu Oct 6 21:48:44 2022 +0800

    chore: fomat readme

commit 40e2b24f061c6b82c35e2362c58219b31c4149f4
Author: sonofmagic <1324318532@qq.com>
Date:   Thu Oct 6 21:46:47 2022 +0800

    chore: update docs

commit 5d94cbde126cacaf3606e3ed5e60e46c2913aae1
Author: sonofmagic <1324318532@qq.com>
Date:   Thu Oct 6 21:44:01 2022 +0800

    feat: commit new options readme

commit e33e0183af23cc82c88781b6f7c5b5a3abcc5a92
Author: sonofmagic <1324318532@qq.com>
Date:   Thu Oct 6 21:31:05 2022 +0800

    v1.11.0

commit 09a87d87a5a55932eec6815b45b9d0aa7ffcf2a8
Author: sonofmagic <1324318532@qq.com>
Date:   Thu Oct 6 21:07:01 2022 +0800

    v1.11.0-beta.3

commit 246947819d0de4916f217e4ed730a4dccc2f0f42
Author: sonofmagic <1324318532@qq.com>
Date:   Thu Oct 6 20:25:33 2022 +0800

    v1.11.0-beta.2

commit 7cd8b11bddafacea6a9071d1657898c813ec668c
Author: sonofmagic <1324318532@qq.com>
Date:   Thu Oct 6 18:40:26 2022 +0800

    feat: commit customReplace

--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "uni -p mp-weixin",
+    "dev:local": "cross-env LOCAL=1 uni -p mp-weixin",
     "build": "uni build -p mp-weixin",
     "build:local": "cross-env LOCAL=1 uni build -p mp-weixin",
     "dev:app": "uni -p app",
@@ -51,6 +52,7 @@
     "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3060320220919001",
     "eventemitter3": "^4.0.7",
     "p-queue": "6.6.2",
+    "vk-uview-ui": "^1.3.9",
     "vue": "^3.2.39",
     "vue-i18n": "^9.1.9",
     "vuex": "^4.0.2"
@@ -73,6 +75,6 @@
     "vite": "^2.9.14",
     "weapp-ide-cli": "^1.0.0",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.11.1"
+    "weapp-tailwindcss-webpack-plugin": "^1.11.2"
   }
 }
