--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weapp-tailwindcss-webpack-plugin",
-  "version": "1.11.1",
+  "version": "1.11.2",
   "description": "把tailwindcss jit引擎，带给小程序开发者们\nbring tailwindcss jit engine to our miniprogram developers!",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
@@ -45,7 +45,7 @@
     "demo:remove-deps": "node scripts/demo/del.js",
     "demo:remove-test-coms": "node scripts/demo/remove-test-coms.js",
     "sync": "open-cli https://npmmirror.com/sync/weapp-tailwindcss-webpack-plugin",
-    "generate:readme": "ts-node readme/write.ts"
+    "generate:readme": "ts-node scripts/readme/write.ts"
   },
   "repository": {
     "type": "git",
