feat: change yarn to pnpm

--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
   },
   "homepage": "https://github.com/sonofmagic/weapp-tailwindcss-webpack-plugin#readme",
   "devDependencies": {
+    "@babel/traverse": "7.19.3",
     "@babel/types": "^7.17.0",
     "@icebreakers/cli": "^0.0.9",
     "@icebreakers/readme": "^0.0.1",
@@ -100,6 +101,8 @@
     "@rollup/plugin-node-resolve": "^14.1.0",
     "@rollup/plugin-typescript": "^8.5.0",
     "@tsconfig/recommended": "^1.0.1",
+    "@types/babel__generator": "^7.6.4",
+    "@types/babel__traverse": "^7.18.2",
     "@types/esm": "^3.2.0",
     "@types/jest": "^29.1.2",
     "@types/loader-utils": "^2.0.3",
@@ -166,10 +169,9 @@
   "dependencies": {
     "@babel/generator": "7.19.3",
     "@babel/parser": "7.19.3",
-    "@babel/traverse": "7.19.3",
     "loader-utils": "^2.0.2",
     "micromatch": "^4.0.5",
-    "postcss": "^8.4.16",
+    "postcss": "8.4.16",
     "postcss-selector-parser": "^6.0.10",
     "webpack-sources": "^3.2.3"
   }
