Feature/change pkg manager to pnpm (#105)
* feat: change yarn to pnpm

* chore: upgrade eslint-plugin-promise

* fix: deps @babel/traverse

--- a/package.json
+++ b/package.json
@@ -100,6 +100,8 @@
     "@rollup/plugin-node-resolve": "^14.1.0",
     "@rollup/plugin-typescript": "^8.5.0",
     "@tsconfig/recommended": "^1.0.1",
+    "@types/babel__generator": "^7.6.4",
+    "@types/babel__traverse": "^7.18.2",
     "@types/esm": "^3.2.0",
     "@types/jest": "^29.1.2",
     "@types/loader-utils": "^2.0.3",
@@ -126,7 +128,7 @@
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jest": "^27.1.1",
     "eslint-plugin-n": "^15.3.0",
-    "eslint-plugin-promise": "6.0.1",
+    "eslint-plugin-promise": "6.1.0",
     "esm": "^3.2.25",
     "execa": "5",
     "fast-glob": "^3.2.12",
@@ -164,12 +166,12 @@
     "webpack4": "npm:webpack@webpack-4"
   },
   "dependencies": {
+    "@babel/traverse": "7.19.3",
     "@babel/generator": "7.19.3",
     "@babel/parser": "7.19.3",
-    "@babel/traverse": "7.19.3",
     "loader-utils": "^2.0.2",
     "micromatch": "^4.0.5",
-    "postcss": "^8.4.16",
+    "postcss": "8.4.16",
     "postcss-selector-parser": "^6.0.10",
     "webpack-sources": "^3.2.3"
   }
