--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -64,6 +64,7 @@
     "@dcloudio/uni-stacktracey": "3.0.0-alpha-3060820221027002",
     "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3060820221027002",
     "autoprefixer": "^10.4.12",
+    "miniprogram-api-typings": "^3.6.0",
     "postcss": "^8.4.18",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "postcss-rpx-transform": "^1.0.1",
