feat: commit hijack method

--- a/demo/native-mina/src/app.json
+++ b/demo/native-mina/src/app.json
@@ -1,5 +1,8 @@
 {
-  "pages": ["pages/index/index"],
+  "pages": [
+    "pages/index/index",
+    "pages/demo/index"
+  ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
