action: commit all os test case

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,8 +5,24 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-
+    # https://github.com/webpack/webpack/blob/main/.github/workflows/test.yml
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        node-version: [10.x, 17.x]
+        part: [a, b]
+        include:
+          - os: ubuntu-latest
+            node-version: 16.x
+            part: a
+          - os: ubuntu-latest
+            node-version: 14.x
+            part: a
+          - os: ubuntu-latest
+            node-version: 12.x
+            part: a
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
       - uses: pnpm/action-setup@v2
