--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -113,7 +113,7 @@
     "vue-template-compiler": "^2.6.11",
     "weapp-ide-cli": "^1.0.0",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.12.2"
+    "weapp-tailwindcss-webpack-plugin": "^1.12.3-beta.1"
   },
   "browserslist": [
     "Android >= 4.4",
