chore: npm script typo fix

--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "demo:remove-test-coms": "node scripts/demo/remove-test-coms.js",
     "sync": "open-cli https://npmmirror.com/sync/weapp-tailwindcss-webpack-plugin",
     "generate:readme": "ts-node scripts/readme/write.ts",
-    "format": "yarn prettier --check \"src/**/*.{ts,js}\" -w",
-    "format:test": "yarn prettier --check \"test/**/*.test.{ts,js}\" -w",
+    "format": "prettier --check \"src/**/*.{ts,js}\" -w",
+    "format:test": "prettier --check \"test/**/*.test.{ts,js}\" -w",
     "ls:pack": "npm pack --dry-run",
     "tw:patch": "ts-node scripts/patcher.ts",
     "cli:patch": "node bin/weapp-tailwindcss.js patch",
