--- a/demo/mpx-app/tsconfig.json
+++ b/demo/mpx-app/tsconfig.json
@@ -3,13 +3,14 @@
     "target": "esnext",
     "module": "esnext",
     "noImplicitThis": true,
-    "noImplicitAny": true,
     "strictNullChecks": true,
     "moduleResolution": "node",
     "lib": [
       "esnext",
       "dom",
       "dom.iterable"
+    ],
+    "types": [
     ]
   },
   "exclude": [
