--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -1,91 +1,52 @@
 {
   "name": "mpx-app",
-  "version": "1.0.0",
-  "description": "A mpx project",
-  "main": "index.js",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "npm run watch",
-    "watch": "node ./build/build.js -w",
-    "watch:prod": "node ./build/build.js -w -p",
-    "build": "node ./build/build.js -p",
-    "build:dev": "node ./build/build.js",
-    "watch:cross": "npm run watch --modes=wx,ali,web",
-    "build:cross": "npm run build --modes=wx,ali,web",
-    "watch:web": "npm run watch --mode=web",
+    "serve": "mpx-cli-service serve:mp",
+    "build": "mpx-cli-service build:mp",
     "lint": "eslint --ext .js,.ts,.mpx src/",
-    "test:unit": "jest --verbose ./test/unit",
-    "build:unit": "npm run build && jest --verbose ./test/unit",
-    "help": "node ./build/build.js --help",
-    "open": "weapp open -p dist/wx"
+    "build:web": "mpx-cli-service build:web",
+    "serve:web": "mpx-cli-service serve:web"
   },
-  "author": "SonOfMagic <qq1324318532@gmail.com>",
-  "license": "ISC",
   "dependencies": {
-    "@mpxjs/api-proxy": "^2.7.44",
-    "@mpxjs/core": "^2.7.44",
-    "vue": "^3.2.37",
-    "vue-i18n": "^9.2.0"
+    "@mpxjs/api-proxy": "^2.8.0",
+    "@mpxjs/core": "^2.8.0",
+    "@mpxjs/fetch": "^2.8.0",
+    "@mpxjs/pinia": "^2.8.0",
+    "@mpxjs/store": "^2.8.0",
+    "@mpxjs/utils": "^2.8.0",
+    "pinia": "^2.0.14",
+    "vue": "^2.6.14",
+    "vue-demi": "^0.13.11",
+    "vue-i18n": "^8.27.2",
+    "vue-i18n-bridge": "^9.2.2",
+    "vue-router": "^3.1.3"
   },
-  "browserslist": [
-    "ios >= 9",
-    "chrome >= 47"
-  ],
   "devDependencies": {
-    "@babel/core": "^7.18.10",
-    "@babel/eslint-parser": "^7.18.9",
-    "@babel/plugin-transform-runtime": "^7.18.10",
-    "@babel/plugin-transform-typescript": "^7.18.10",
-    "@babel/preset-env": "^7.18.10",
-    "@babel/runtime-corejs3": "^7.18.9",
-    "@mpxjs/miniprogram-simulate": "^1.4.17",
-    "@mpxjs/mpx-jest": "0.0.22",
-    "@mpxjs/webpack-plugin": "^2.7.46",
-    "@typescript-eslint/eslint-plugin": "^5.32.0",
-    "@typescript-eslint/parser": "^5.32.0",
-    "autoprefixer": "^10.4.8",
-    "babel-jest": "^27.4.5",
-    "babel-loader": "^8.1.0",
-    "chalk": "^4.0.0",
-    "commander": "^9.4.0",
-    "copy-webpack-plugin": "^11.0.0",
-    "css-loader": "^6.7.1",
-    "eslint": "^8.21.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-html": "^6.2.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-webpack-plugin": "^3.1.0",
-    "html-loader": "^3.0.1",
-    "html-webpack-plugin": "^5.3.2",
-    "http-server": "^14.1.1",
-    "jest": "^27.4.5",
-    "npm-run-all": "^4.1.5",
-    "path": "^0.12.7",
-    "postcss": "^8.4.14",
-    "postcss-rem-to-responsive-pixel": "^5.1.3",
-    "postcss-rpx-transform": "^1.0.1",
-    "rimraf": "^3.0.2",
-    "sass": "^1.54.2",
-    "sass-loader": "^13.0.2",
-    "stylus": "^0.58.1",
-    "stylus-loader": "^7.0.0",
-    "tailwind-css-variables-theme-generator": "^0.3.8",
-    "tailwindcss": "^3.1.7",
-    "tailwindcss-rem2px-preset": "^1.0.3",
-    "ts-jest": "^27.1.2",
-    "ts-loader": "^9.2.6",
-    "typescript": "^4.1.2",
-    "vue-loader": "^17.0.0",
-    "vue-router": "^4.1.3",
-    "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.7.8",
-    "weapp-ide-cli": "^1.0.0",
-    "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.12.6",
-    "webpack": "^5.74.0",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-dev-server": "^4.9.3",
-    "webpack-merge": "^5.8.0"
-  }
+    "@babel/core": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/runtime-corejs3": "^7.10.4",
+    "@mpxjs/babel-plugin-inject-page-events": "^2.8.0",
+    "@mpxjs/eslint-config-ts": "^1.0.5",
+    "@mpxjs/mpx-cli-service": "^1.0.0",
+    "@mpxjs/size-report": "^2.8.0",
+    "@mpxjs/vue-cli-plugin-mpx": "^1.0.0",
+    "@mpxjs/vue-cli-plugin-mpx-eslint": "^1.0.0",
+    "@mpxjs/vue-cli-plugin-mpx-mp": "^1.0.0",
+    "@mpxjs/vue-cli-plugin-mpx-typescript": "^1.0.0",
+    "@mpxjs/vue-cli-plugin-mpx-web": "^1.0.0",
+    "@mpxjs/webpack-plugin": "^2.8.0",
+    "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.2.4",
+    "eslint": "^7.0.0",
+    "postcss": "^8.2.6",
+    "stylus": "^0.55.0",
+    "stylus-loader": "^6.1.0",
+    "typescript": "^4.1.3",
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^5.43.0"
+  },
+  "browserslist": "ios >= 8, chrome >= 47"
 }
